syntax = "proto3";

package intrvproto;
option go_package = "github.com/RafalSalwa/interview-app-srv/intrvproto";
option php_namespace = "App\\Protobuf\\Service";
option php_metadata_namespace = "App\\Protobuf\\GPBMetadata";

import "rpc_signin.proto";

service AuthService {
    rpc SignUpUser(SignUpUserInput) returns (SignUpUserResponse) {}
    rpc SignInUser(SignInUserInput) returns (SignInUserResponse) {}
    rpc SignInByCode(SignInByCodeUserInput) returns (SignInUserResponse) {}
    rpc GetVerificationKey(VerificationCodeRequest) returns (VerificationCodeResponse) {}
}
